--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <nav class="navbar">
               <a href="#" class="brand">Mi página web</a>
               <ul class="nav-links">
-                <li><a href="#">Principal</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Servicio</a></li>
-                <li><a href="otrapagina">otra pagina</a></li>
+                <li><a href="index.html">Principal</a></li>
+                <li><a href="about.html">Nosotros</a></li>
+                <li><a href="service.html">Servicio</a></li>
+                <li><a href="otrapagina.htm">otra pagina</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
               </ul>
             </nav>
