--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
             <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Titulo</h1>
+        <h2>Segundo Titulo</h2>
+        <h3>Tercer Titulo</h3>
         <div class="container-nav">
             <nav class="navbar">
               <a href="#" class="brand">Mi página web</a>
               <ul class="nav-links">
                 <li><a href="index.html">Principal</a></li>
                 <li><a href="about.html">Nosotros</a></li>
-                <li><a href="service.html">Servicio</a></li>
-                <li><a href="otrapagina.htm">otra pagina</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                
               </ul>
             </nav>
             <button class="button-menu-toggle">Menu</button>
